cập nhật database

--- a/HNSHOP/appsettings.json
+++ b/HNSHOP/appsettings.json
@@ -7,7 +7,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Server=.;Initial Catalog=shopdb;Integrated Security=True;Trust Server Certificate=True"
+    "DefaultConnection": "Server=.;Initial Catalog=shopdb1;Integrated Security=True;Trust Server Certificate=True"
   },
   "SMTP": {
     "Host": "smtp.gmail.com",
