--- a/HNSHOP/HNSHOP.csproj
+++ b/HNSHOP/HNSHOP.csproj
@@ -31,4 +31,9 @@
     <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="8.5.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Data\" />
+    <Folder Include="Migrations\" />
+  </ItemGroup>
+
 </Project>
